# co2

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
resources/: emissions_2024_2025.json  emissions_2025.json  emissions_jul2024_may2025.json  emissions_march_oct_2024.json
src/: aws.rs  display.rs  main.rs  period.rs  summary.rs
