[package]
name = "co2"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
aws-config = "1"
aws-sdk-sustainability = "1"
ratatui = "0.29"
ratatui-stacked-bar = "0.2"
crossterm = "0.28"
anyhow = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
