[package]
name = "co2"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
aws-config = "1"
aws-sdk-sustainability = "1"
ratatui = "0.30"
crossterm = "0.28"
anyhow = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
